Fixed slide visibility

--- a/frontend/src/components/pages/Galleries/Galleries.module.sass
+++ b/frontend/src/components/pages/Galleries/Galleries.module.sass
@@ -100,6 +100,7 @@
     display: flex
     align-items: center
     justify-content: center
+    
     .swipe-container
       // display: flex
 
@@ -132,6 +133,10 @@
       // display: flex
       // align-items: center
       // justify-content: center
+      opacity: 0
+      transition: opacity 200ms ease-in-out
+      &.visible
+        opacity: 1
       .gallery-image
         position: absolute
         left: 50%; top: 50%
